--- a/BackgroundLocationUpdates/gradle/wrapper/gradle-wrapper.properties
+++ b/BackgroundLocationUpdates/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Thu May 18 12:54:01 PDT 2017
+#Wed Oct 03 10:17:21 CST 2018
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-4.0-milestone-1-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-4.6-all.zip
